Inserts the methods for updates values of a book.
