# docs/swagger.yaml
@@ -3,6 +3,7 @@ definitions:
   models.Book:
     properties:
       autore:
+        maxLength: 64
         type: string
       categoria:
         type: string
@@ -24,6 +25,7 @@ definitions:
         maxLength: 512
         type: string
       titolo:
+        description: 'TODO: fix length'
         maxLength: 255
         type: string
     required:
@@ -159,6 +161,319 @@ paths:
           schema:
             $ref: '#/definitions/responses.ResponseErrorJSON'
       summary: Get a book
+      tags:
+      - Book
+  /book/autore/{id}:
+    put:
+      description: |-
+        Update name of the writer.
+        The name of the writer can't be more than 64 characters.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Writer
+        in: body
+        name: writer
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update writer
+      tags:
+      - Book
+  /book/categoria/{id}:
+    put:
+      description: |-
+        Update the category of a book
+        The types of categories are: Best Seller, New Releases, and Best Offers.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Category
+        in: body
+        name: category
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update category
+      tags:
+      - Book
+  /book/copertina/{id}:
+    put:
+      description: |-
+        Update the type cover of a book.
+        There are two types of cover: Hard Cover or Flexible Cover.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Cover
+        in: body
+        name: cover
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update cover
+      tags:
+      - Book
+  /book/genere/{id}:
+    put:
+      description: |-
+        Update the genre of a book.
+        Here a list of all genre supported: Action, Adventure, Business, Cookbooks, Drama, Detective, Fantasy, Fiction, History, Horror, Romance, Psychology, Science Fiction, Short Stories, Thriller.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Genre
+        in: body
+        name: genre
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update genre
+      tags:
+      - Book
+  /book/id-copertina/{id}:
+    put:
+      description: Update the id cover of a book
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Id Cover
+        in: body
+        name: idcover
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update id cover
+      tags:
+      - Book
+  /book/prezzo/{id}:
+    put:
+      description: |-
+        Update the price of a book.
+        The type of the price is a float (e.g. 15.90).
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Price
+        in: body
+        name: price
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update price
+      tags:
+      - Book
+  /book/quantita/{id}:
+    put:
+      description: |-
+        Update the quantity of a book
+        You can choose the quantity from 1 to 5
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Quantity
+        in: body
+        name: quantity
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update quantity
+      tags:
+      - Book
+  /book/summary/{id}:
+    put:
+      description: |-
+        Update the summary of a book.
+        The summary of the book cannot be less than 512 characters.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Summary
+        in: body
+        name: summary
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update summary
+      tags:
+      - Book
+  /book/titolo/{id}:
+    put:
+      description: |-
+        Update title of a book.
+        The title cannot be more than 255 characters.
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Title
+        in: body
+        name: title
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
+      summary: Update title
       tags:
       - Book
 swagger: "2.0"
